# auth_for_warp

./: Cargo.toml  README.md
.github/workflows/: continuous_integration.yaml
examples/: simple.rs
src/: auth.rs  case_insensitive_string_ext.rs  error.rs  lib.rs  routes.rs  types.rs
tests/: integration.rs
