[package]
name = "auth_for_warp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "plugin auth module for warp-based servers"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "sync"] }
warp = { version = "0.3", features = ["tls"] }
uuid = { version = "1.0", features = ["v4"] }
rust-argon2 = "1.0"
jsonwebtoken = { version = "8.1", default-features = false }

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
